--- a/notebooks/All About REM Statistics.ipynb
+++ b/notebooks/All About REM Statistics.ipynb
@@ -183,7 +183,7 @@
    "id": "0ace052f-61e1-4ea9-8853-d76f721b0184",
    "metadata": {},
    "source": [
-    "### Let's look at fuel oil, since that's what we are replacing\n",
+    "## Let's look at fuel oil, since that's what we are replacing\n",
     "\n",
     "It's a fairly big block of nested dictionaries, but we will go through it peice by\n",
     "peice."
@@ -459,7 +459,7 @@
    "id": "d66cb699-be21-4bd5-8412-2fb81cb7f334",
    "metadata": {},
    "source": [
-    "### Emissions\n",
+    "## Emissions\n",
     "\n",
     "In addition to consumption of various fuels, the model estimates emissions before and after the upgrade. Let's look at some of those numbers for total household emissions, including not just those used for heating and cooling."
    ]
