Fix based on PR question.

--- a/notebooks/All About REM Statistics.ipynb
+++ b/notebooks/All About REM Statistics.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "id": "27e49c93-57d7-4ee9-bb54-623b50e4e87c",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 2,
    "id": "cecd5ef2-6a34-4752-9899-fc3fe519c3d9",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 3,
    "id": "654ba342-e8d5-480b-9bcc-cd9e226b1122",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 4,
    "id": "58f2da86-6a32-448d-83a5-ba487e6c54a8",
    "metadata": {},
    "outputs": [],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 5,
    "id": "2aa2f974-6382-45db-9b8a-bc127873f924",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 6,
    "id": "064bddb1-9644-44d3-96de-4d7a070e2772",
    "metadata": {},
    "outputs": [
@@ -140,7 +140,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 7,
    "id": "90889101-3961-4c23-841c-f6bfb994cee1",
    "metadata": {},
    "outputs": [],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 8,
    "id": "048c58b4-7071-4a74-b273-8e877f6240a3",
    "metadata": {},
    "outputs": [],
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 9,
    "id": "053ed56b",
    "metadata": {},
    "outputs": [
@@ -202,7 +202,7 @@
        "  'percentile_80': {'value': 9354.2135, 'units': '$'}}}"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 10,
    "id": "6bafae54",
    "metadata": {},
    "outputs": [
@@ -226,7 +226,7 @@
        " 'propane': {'value': 7.3776, 'units': 'kgCO2e/gallon'}}"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 11,
    "id": "04ddef09-134c-4734-a932-1d698b268345",
    "metadata": {},
    "outputs": [],
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 12,
    "id": "f859af3b-7dd1-45f0-81e5-9377aed86b1e",
    "metadata": {},
    "outputs": [
@@ -303,7 +303,7 @@
        "   'percentile_80': {'value': -5402.4958, 'units': '$'}}}}"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 13,
    "id": "6aab1b8e-c3d9-4d0f-a7d4-1a86f1543def",
    "metadata": {},
    "outputs": [
@@ -336,7 +336,7 @@
        "dict_keys(['baseline', 'upgrade', 'delta'])"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 14,
    "id": "9000390b-3ccf-42dc-b1bd-8df3c67e1a21",
    "metadata": {},
    "outputs": [],
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 15,
    "id": "8ae5239f-0a6b-4838-aa56-a800a8f69fe2",
    "metadata": {},
    "outputs": [
@@ -394,7 +394,7 @@
        " 'delta': {'value': -1829.6592, 'units': 'gallon'}}"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 16,
    "id": "f4a4ad93-2321-4925-a783-691768f23ce9",
    "metadata": {},
    "outputs": [
@@ -435,7 +435,7 @@
        "0.0"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 17,
    "id": "69e7ded5-6084-4031-906a-5f806b447632",
    "metadata": {},
    "outputs": [
@@ -468,7 +468,7 @@
        " 'delta': {'value': -1734.6599, 'units': 'gallon'}}"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,12 +486,13 @@
     "Unlike the mean, the median of the distribution uses no fuel oil after the upgrade. This is because a \n",
     "minority of homes in the sample used fuel oil for things other than heating (in this case, we know it was 45%). \n",
     "\n",
-    "Indeed, we can look at the 20th percentile and see that it is also still zero after the upgrade."
+    "We can look at the 20th and 80th percentile and see that they are zero and non-zero \n",
+    "respectively after the upgrade."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 18,
    "id": "e54eb08e-491b-4f2b-83b3-1fd4901941a5",
    "metadata": {},
    "outputs": [
@@ -501,13 +502,34 @@
        "{'value': 0.0, 'units': 'gallon'}"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "results_for_stat(fuel_oil_results, \"energy\", \"percentile_20\")[\"upgrade\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "172e005f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'value': 127.0023, 'units': 'gallon'}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results_for_stat(fuel_oil_results, \"energy\", \"percentile_80\")[\"upgrade\"]"
    ]
   },
   {
@@ -522,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 20,
    "id": "00facc0b-8037-495a-ae24-451017d0fecf",
    "metadata": {},
    "outputs": [],
@@ -532,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 21,
    "id": "9e391af5-451b-43ef-88fd-572ee62b041c",
    "metadata": {},
    "outputs": [],
@@ -542,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 22,
    "id": "c197ae97-0161-4d3d-8103-13eb9ecdfb5f",
    "metadata": {},
    "outputs": [
@@ -554,7 +576,7 @@
        " 'delta': {'value': -19006.6057, 'units': 'kgCO2e'}}"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 23,
    "id": "77f9bbef-5c57-405a-a2c6-6f206c7b499c",
    "metadata": {},
    "outputs": [
@@ -586,7 +608,7 @@
        "-661.15"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,7 +654,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
