update topline description of sampling

--- a/notebooks/All About REM Statistics.ipynb
+++ b/notebooks/All About REM Statistics.ipynb
@@ -10,18 +10,22 @@
     "In order to make estimates for the impact of an electrical upgrade\n",
     "on a home, the REM API does a\n",
     "[Monte Carlo](https://en.wikipedia.org/wiki/Monte_Carlo_method)\n",
-    "simulation over one hundred theoretical homes that closely\n",
+    "simulation over a number of theoretical homes that closely\n",
     "resemble the target home and, taken as a whole, \n",
     "probabalistically represent it. \n",
     "\n",
     "We do this because we generally don't know everything about each\n",
-    "home. Rewiring America has a large database, based on public records,\n",
+    "home. We have a large database of home properties\n",
     "that tells us things like when a home what built and how many square feet\n",
     "it is. But it does not give us all the details that we need to accurately\n",
-    "predict savings. So we instead use a set of simulated homes that we know\n",
-    "more about, predict the energy consumption for each of them, \n",
-    "and compute statistics across the set of homes to decide what is likely\n",
-    "to happen in the given home.\n",
+    "predict savings. So instead we sample theoretical homes from a \n",
+    "[conditional probability distribution](https://github.com/NREL/resstock/tree/develop/project_national/housing_characteristics) based on the properties\n",
+    "that we do know. We then predict the energy consumption for each \n",
+    "sample home using a machine learning model, which yields\n",
+    "a distribution of outcomes that probablistically represents the\n",
+    "energy consumption in the query home under a given scenario.\n",
+    "We compute statistics across the this distribution to decide\n",
+    "what is likely to happen in the query home.\n",
     "\n",
     "This means that instead of getting one answer for\n",
     "how much less fuel oil the home will use or how\n",
