make slighly less wordy

--- a/notebooks/All About REM Statistics.ipynb
+++ b/notebooks/All About REM Statistics.ipynb
@@ -23,7 +23,7 @@
     "that we do know. We then predict the energy consumption for each \n",
     "sample home using a machine learning model, which yields\n",
     "a distribution of outcomes that probablistically represents the\n",
-    "energy consumption in the query home under a given scenario.\n",
+    "query home's energy consumption under the baseline and upgrade scenarios.\n",
     "We compute statistics across the this distribution to decide\n",
     "what is likely to happen in the query home.\n",
     "\n",
