--- a/notebooks/REM Demo.ipynb
+++ b/notebooks/REM Demo.ipynb
@@ -139,7 +139,7 @@
     }
    ],
    "source": [
-    "annual_savings = -[delta for delta in data['delta']['cost']['mean'] if delta['fuel_type'] == 'total'][0][\"value\"]\n",
+    "annual_savings = -data['fuel_results']['total']['delta']['cost']['mean']['value']\n",
     "\n",
     "f\"Expected annual savings: ${annual_savings:.2f}\""
    ]
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f6c9c4b-3042-4f55-957b-d4f8f3dbe965",
+   "id": "d697ac84",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -155,7 +155,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
