--- a/notebooks/All About REM Statistics.ipynb
+++ b/notebooks/All About REM Statistics.ipynb
@@ -10,26 +10,31 @@
     "In order to make estimates for the impact of an electrical upgrade\n",
     "on a home, the REM API does a\n",
     "[Monte Carlo](https://en.wikipedia.org/wiki/Monte_Carlo_method)\n",
-    "simulation over one hundred theoretical homes that closely\n",
+    "simulation over a number of theoretical homes that closely\n",
     "resemble the target home and, taken as a whole, \n",
     "probabalistically represent it. \n",
     "\n",
     "We do this because we generally don't know everything about each\n",
-    "home. Rewiring America has a large database, based on public records,\n",
+    "home. We have a large database of home properties\n",
     "that tells us things like when a home what built and how many square feet\n",
-    "it is. But it does not always give us all the details that would help\n",
-    "us estimate savings. So we look at other similar homes nearby that we know\n",
-    "more about, and use statistics across all of them to decide what is likely\n",
-    "to happen in the given home.\n",
+    "it is. But it does not give us all the details that we need to accurately\n",
+    "predict savings. So instead we sample theoretical homes from a \n",
+    "[conditional probability distribution](https://github.com/NREL/resstock/tree/develop/project_national/housing_characteristics) based on the properties\n",
+    "that we do know. We then predict the energy consumption for each \n",
+    "sample home using a machine learning model, which yields\n",
+    "a distribution of outcomes that probablistically represents the\n",
+    "query home's energy consumption under the baseline and upgrade scenarios.\n",
+    "We compute statistics across the this distribution to decide\n",
+    "what is likely to happen in the query home.\n",
     "\n",
     "This means that instead of getting one answer for\n",
     "how much less fuel oil the home will use or how\n",
     "much money the homeowner will save each year, it generates\n",
-    "one hundred answers to the question, each based on one\n",
+    "many answers to the question, each based on one\n",
     "theoretical home.\n",
     "\n",
     "In the return value from the API, we get statistics across\n",
-    "those theoretical homes including the mean, meadian, and 20th\n",
+    "those theoretical homes including the mean, median, and 20th\n",
     "and 80th percentile values for savings, emissions, and so on.\n",
     "\n",
     "The purpose of this notebook is to illustrate how those statistics\n",
@@ -179,6 +184,62 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "053ed56b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'energy': {'mean': {'value': 1896.4883, 'units': 'gallon'},\n",
+       "  'median': {'value': 1835.3017, 'units': 'gallon'},\n",
+       "  'percentile_20': {'value': 1421.099, 'units': 'gallon'},\n",
+       "  'percentile_80': {'value': 2339.4447, 'units': 'gallon'}},\n",
+       " 'emissions': {'mean': {'value': 23339.9583, 'units': 'kgCO2e'},\n",
+       "  'median': {'value': 22586.9396, 'units': 'kgCO2e'},\n",
+       "  'percentile_20': {'value': 17489.3734, 'units': 'kgCO2e'},\n",
+       "  'percentile_80': {'value': 28791.3943, 'units': 'kgCO2e'}},\n",
+       " 'cost': {'mean': {'value': 7583.0629, 'units': '$'},\n",
+       "  'median': {'value': 7338.41, 'units': '$'},\n",
+       "  'percentile_20': {'value': 5682.2303, 'units': '$'},\n",
+       "  'percentile_80': {'value': 9354.2135, 'units': '$'}}}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fuel_results['fuel_oil']['baseline']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6bafae54",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'electricity': {'value': 0.1241, 'units': 'kgCO2e/kWh'},\n",
+       " 'natural_gas': {'value': 6.6798, 'units': 'kgCO2e/therm'},\n",
+       " 'fuel_oil': {'value': 12.3069, 'units': 'kgCO2e/gallon'},\n",
+       " 'propane': {'value': 7.3776, 'units': 'kgCO2e/gallon'}}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['emissions_factors']"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "0ace052f-61e1-4ea9-8853-d76f721b0184",
    "metadata": {},
@@ -191,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "04ddef09-134c-4734-a932-1d698b268345",
    "metadata": {},
    "outputs": [],
@@ -201,54 +262,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "f859af3b-7dd1-45f0-81e5-9377aed86b1e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'baseline': {'energy': {'mean': {'value': 1896.4882588608175,\n",
-       "    'units': 'gallon'},\n",
-       "   'median': {'value': 1835.3017229512634, 'units': 'gallon'},\n",
-       "   'percentile_20': {'value': 1421.0989918991424, 'units': 'gallon'},\n",
-       "   'percentile_80': {'value': 2339.4446765584385, 'units': 'gallon'}},\n",
-       "  'emissions': {'mean': {'value': 23339.958325300828, 'units': 'kgCO2e'},\n",
-       "   'median': {'value': 22586.939585782588, 'units': 'kgCO2e'},\n",
-       "   'percentile_20': {'value': 17489.373367898726, 'units': 'kgCO2e'},\n",
-       "   'percentile_80': {'value': 28791.39430476595, 'units': 'kgCO2e'}},\n",
-       "  'cost': {'mean': {'value': 7583.062898664385, 'units': '$'},\n",
-       "   'median': {'value': 7338.409999715124, 'units': '$'},\n",
-       "   'percentile_20': {'value': 5682.230296154243, 'units': '$'},\n",
-       "   'percentile_80': {'value': 9354.213529876717, 'units': '$'}}},\n",
-       " 'upgrade': {'energy': {'mean': {'value': 66.82907559143058,\n",
-       "    'units': 'gallon'},\n",
+       "{'baseline': {'energy': {'mean': {'value': 1896.4883, 'units': 'gallon'},\n",
+       "   'median': {'value': 1835.3017, 'units': 'gallon'},\n",
+       "   'percentile_20': {'value': 1421.099, 'units': 'gallon'},\n",
+       "   'percentile_80': {'value': 2339.4447, 'units': 'gallon'}},\n",
+       "  'emissions': {'mean': {'value': 23339.9583, 'units': 'kgCO2e'},\n",
+       "   'median': {'value': 22586.9396, 'units': 'kgCO2e'},\n",
+       "   'percentile_20': {'value': 17489.3734, 'units': 'kgCO2e'},\n",
+       "   'percentile_80': {'value': 28791.3943, 'units': 'kgCO2e'}},\n",
+       "  'cost': {'mean': {'value': 7583.0629, 'units': '$'},\n",
+       "   'median': {'value': 7338.41, 'units': '$'},\n",
+       "   'percentile_20': {'value': 5682.2303, 'units': '$'},\n",
+       "   'percentile_80': {'value': 9354.2135, 'units': '$'}}},\n",
+       " 'upgrade': {'energy': {'mean': {'value': 66.8291, 'units': 'gallon'},\n",
        "   'median': {'value': 0.0, 'units': 'gallon'},\n",
        "   'percentile_20': {'value': 0.0, 'units': 'gallon'},\n",
-       "   'percentile_80': {'value': 127.0022884552967, 'units': 'gallon'}},\n",
-       "  'emissions': {'mean': {'value': 822.4611103889995, 'units': 'kgCO2e'},\n",
+       "   'percentile_80': {'value': 127.0023, 'units': 'gallon'}},\n",
+       "  'emissions': {'mean': {'value': 822.4611, 'units': 'kgCO2e'},\n",
        "   'median': {'value': 0.0, 'units': 'kgCO2e'},\n",
        "   'percentile_20': {'value': 0.0, 'units': 'kgCO2e'},\n",
-       "   'percentile_80': {'value': 1563.0089487319115, 'units': 'kgCO2e'}},\n",
-       "  'cost': {'mean': {'value': 267.2144587775201, 'units': '$'},\n",
+       "   'percentile_80': {'value': 1563.0089, 'units': 'kgCO2e'}},\n",
+       "  'cost': {'mean': {'value': 267.2145, 'units': '$'},\n",
        "   'median': {'value': 0.0, 'units': '$'},\n",
        "   'percentile_20': {'value': 0.0, 'units': '$'},\n",
-       "   'percentile_80': {'value': 507.81560978886694, 'units': '$'}}},\n",
-       " 'delta': {'energy': {'mean': {'value': -1829.659183269387, 'units': 'gallon'},\n",
-       "   'median': {'value': -1734.6598508032844, 'units': 'gallon'},\n",
-       "   'percentile_20': {'value': -2254.980892510153, 'units': 'gallon'},\n",
-       "   'percentile_80': {'value': -1351.1387227570224, 'units': 'gallon'}},\n",
-       "  'emissions': {'mean': {'value': -22517.497214911826, 'units': 'kgCO2e'},\n",
-       "   'median': {'value': -21348.346575391333, 'units': 'kgCO2e'},\n",
-       "   'percentile_20': {'value': -27751.903978119604, 'units': 'kgCO2e'},\n",
-       "   'percentile_80': {'value': -16628.376861026205, 'units': 'kgCO2e'}},\n",
-       "  'cost': {'mean': {'value': -7315.848439886864, 'units': '$'},\n",
-       "   'median': {'value': -6935.9958834284835, 'units': '$'},\n",
-       "   'percentile_20': {'value': -9016.487111532275, 'units': '$'},\n",
-       "   'percentile_80': {'value': -5402.495834929128, 'units': '$'}}}}"
+       "   'percentile_80': {'value': 507.8156, 'units': '$'}}},\n",
+       " 'delta': {'energy': {'mean': {'value': -1829.6592, 'units': 'gallon'},\n",
+       "   'median': {'value': -1734.6599, 'units': 'gallon'},\n",
+       "   'percentile_20': {'value': -2254.9809, 'units': 'gallon'},\n",
+       "   'percentile_80': {'value': -1351.1387, 'units': 'gallon'}},\n",
+       "  'emissions': {'mean': {'value': -22517.4972, 'units': 'kgCO2e'},\n",
+       "   'median': {'value': -21348.3466, 'units': 'kgCO2e'},\n",
+       "   'percentile_20': {'value': -27751.904, 'units': 'kgCO2e'},\n",
+       "   'percentile_80': {'value': -16628.3769, 'units': 'kgCO2e'}},\n",
+       "  'cost': {'mean': {'value': -7315.8484, 'units': '$'},\n",
+       "   'median': {'value': -6935.9959, 'units': '$'},\n",
+       "   'percentile_20': {'value': -9016.4871, 'units': '$'},\n",
+       "   'percentile_80': {'value': -5402.4958, 'units': '$'}}}}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,12 +325,12 @@
     "\n",
     "- `baseline` contains estimates of what was consumed in a typical year before the upgrade\n",
     "- `upgrade` contains estimates of what is consumed in a typical year after the upgrade\n",
-    "- `delta` contains estimats of the change in consumption in a typical year due to the upgrade"
+    "- `delta` contains estimates of the change in consumption in a typical year due to the upgrade"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "6aab1b8e-c3d9-4d0f-a7d4-1a86f1543def",
    "metadata": {},
    "outputs": [
@@ -281,7 +340,7 @@
        "dict_keys(['baseline', 'upgrade', 'delta'])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "9000390b-3ccf-42dc-b1bd-8df3c67e1a21",
    "metadata": {},
    "outputs": [],
@@ -327,19 +386,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "8ae5239f-0a6b-4838-aa56-a800a8f69fe2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'baseline': {'value': 1896.4882588608175, 'units': 'gallon'},\n",
-       " 'upgrade': {'value': 66.82907559143058, 'units': 'gallon'},\n",
-       " 'delta': {'value': -1829.659183269387, 'units': 'gallon'}}"
+       "{'baseline': {'value': 1896.4883, 'units': 'gallon'},\n",
+       " 'upgrade': {'value': 66.8291, 'units': 'gallon'},\n",
+       " 'delta': {'value': -1829.6592, 'units': 'gallon'}}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,8 +417,10 @@
     "\n",
     "The first thing to notice is that mean consumption of fuel oil after the upgrade is not exactly zero.\n",
     "It is still a small non-zero number. The reason for this is that in the sample space we constructed,\n",
-    "there was at least one home that used fuel oil for some purpose other than heating, like maybe decorative\n",
-    "outdoor lighting, so it continued to use it after the upgrade.\n",
+    "there was at least one home that used fuel oil for some purpose other than heating, like water heating,\n",
+    "so it continued to use it after the upgrade. In fact, while the samples are not exposed in this API,\n",
+    "if we look under the hood, 89 out of 200 (45%) of the theoretical samples have Fuel Oil water heating,\n",
+    "since heating and water heating fuels are highly correlated and fuel oil is prevalant for both in Rhode Island.\n",
     "\n",
     "### Mean baseline, upgrade, and change\n",
     "\n",
@@ -368,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "f4a4ad93-2321-4925-a783-691768f23ce9",
    "metadata": {},
    "outputs": [
@@ -378,7 +439,7 @@
        "0.0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,19 +460,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "69e7ded5-6084-4031-906a-5f806b447632",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'baseline': {'value': 1835.3017229512634, 'units': 'gallon'},\n",
+       "{'baseline': {'value': 1835.3017, 'units': 'gallon'},\n",
        " 'upgrade': {'value': 0.0, 'units': 'gallon'},\n",
-       " 'delta': {'value': -1734.6598508032844, 'units': 'gallon'}}"
+       " 'delta': {'value': -1734.6599, 'units': 'gallon'}}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,16 +487,16 @@
    "id": "d43d13ea-a01f-4b6f-bac6-2e1c2bc242aa",
    "metadata": {},
    "source": [
-    "Unlike the mean, the median of the distribution uses no fuel oil after the upgrade. This is because whatever\n",
-    "home or homes in the sample used fuel oil for something other than heating, there were probably not very\n",
-    "many of them.\n",
+    "Unlike the mean, the median of the distribution uses no fuel oil after the upgrade. This is because a \n",
+    "minority of homes in the sample used fuel oil for things other than heating (in this case, we know it was 45%). \n",
     "\n",
-    "Indeed, we can look at the 20th percentile and see that it is also still zero after the upgrade."
+    "We can look at the 20th and 80th percentile and see that they are zero and non-zero \n",
+    "respectively after the upgrade."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "e54eb08e-491b-4f2b-83b3-1fd4901941a5",
    "metadata": {},
    "outputs": [
@@ -445,7 +506,7 @@
        "{'value': 0.0, 'units': 'gallon'}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,18 +516,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "172e005f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'value': 127.0023, 'units': 'gallon'}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results_for_stat(fuel_oil_results, \"energy\", \"percentile_80\")[\"upgrade\"]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d66cb699-be21-4bd5-8412-2fb81cb7f334",
    "metadata": {},
    "source": [
     "## Emissions\n",
     "\n",
-    "In addition to consumption of various fuels, the model estimates emissions before and after the upgrade. Let's look at some of those numbers for total household emissions, including not just those used for heating and cooling."
+    "In addition to consumption of various fuels, the model estimates in kgCO2e (which include other greenhouse such as methane) emissions before and after the upgrade. Let's look at some of those numbers for total household emissions, including those for  all fuels and all end uses in the home."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "00facc0b-8037-495a-ae24-451017d0fecf",
    "metadata": {},
    "outputs": [],
@@ -476,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "9e391af5-451b-43ef-88fd-572ee62b041c",
    "metadata": {},
    "outputs": [],
@@ -486,19 +568,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "c197ae97-0161-4d3d-8103-13eb9ecdfb5f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'baseline': {'value': 24494.886756684195, 'units': 'kgCO2e'},\n",
-       " 'upgrade': {'value': 4827.1295927221445, 'units': 'kgCO2e'},\n",
-       " 'delta': {'value': -19006.60574134832, 'units': 'kgCO2e'}}"
+       "{'baseline': {'value': 24494.8868, 'units': 'kgCO2e'},\n",
+       " 'upgrade': {'value': 4827.1296, 'units': 'kgCO2e'},\n",
+       " 'delta': {'value': -19006.6057, 'units': 'kgCO2e'}}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "77f9bbef-5c57-405a-a2c6-6f206c7b499c",
    "metadata": {},
    "outputs": [
@@ -530,7 +612,7 @@
        "-661.15"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,17 +628,23 @@
    "source": [
     "What happened? The reason the numbers don't quite add up has to do with how we compute the medians.\n",
     "`median_emissions['upgrade']` is a median taken over the total emissions of every home in the distribution\n",
-    "after the upgrade. `median_emissions['baseline']` is the median total_emissions of every home in the distribution\n",
+    "after the upgrade. `median_emissions['baseline']` is the median total emissions of every home in the distribution\n",
     "before the upgrade. But because factors like insulation affect the amount of heat needed, which affects emissions\n",
     "differently before and after the upgrade, homes can move around in the distribution, which can affect the median.\n",
     "`median_emissions['delta']` is the median of the change in emissions, which is therefore not necessarily the difference\n",
     "of the median emissions before and after the upgrade."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "174ab7c2",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
