Fixing push error

--- a/notebooks/Health Impacts.ipynb
+++ b/notebooks/Health Impacts.ipynb
@@ -160,7 +160,7 @@
     "headers = {\n",
     "    \"Content-Type\": \"application/json\",\n",
     "    \"Accept\": \"application/json\",\n",
-    "    \"Authorization\": f\"Bearer {API_KEY}\"\n",
+    "    \"Authorization\": \"Bearer YOUR KEY HERE\"\n",
     "}"
    ]
   },
