Put API key logic back. Works fine locally and should work in prod as well if you put your key in the file.

--- a/notebooks/Health Impacts.ipynb
+++ b/notebooks/Health Impacts.ipynb
@@ -83,7 +83,7 @@
     "# TODO: switch back to production URL after V2 is deployed\n",
     "URL = \"http://127.0.0.1:8080/api/v1/health-impacts/\"\n",
     "\n",
-    "API_KEY = \"\"  # Put your API key here, or better yet in the file ~/.rwapi/api_key.txt"
+    "API_KEY = None  # Put your API key here, or better yet in the file ~/.rwapi/api_key.txt"
    ]
   },
   {
@@ -160,7 +160,7 @@
     "headers = {\n",
     "    \"Content-Type\": \"application/json\",\n",
     "    \"Accept\": \"application/json\",\n",
-    "    \"Authorization\": \"Bearer YOUR KEY HERE\"\n",
+    "    \"Authorization\": f\"Bearer {API_KEY}\"\n",
     "}"
    ]
   },
