--- a/notebooks/Health Impacts.ipynb
+++ b/notebooks/Health Impacts.ipynb
@@ -5,6 +5,7 @@
    "id": "f9a2131e-ef4d-48a5-85cf-be523964d472",
    "metadata": {},
    "source": [
+    "# TODO: Update this after https://github.com/rewiringamerica/api_demos/pull/8 is merged\n",
     "# Calling the Rewiring America Health Impacts API from Python\n",
     "\n",
     "In December, Rewiring America released our second public API. The API is based on data and models\n",
