--- a/notebooks/REM Demo.ipynb
+++ b/notebooks/REM Demo.ipynb
@@ -71,7 +71,7 @@
    "outputs": [],
    "source": [
     "address = '8009 Belmont Ave., Lubbock, TX 79424'\n",
-    "upgrade = \"high_eff_hp_elec_backup\"\n",
+    "upgrade = \"hvac__heat_pump_seer24_hspf13\"\n",
     "heating_fuel = 'natural_gas'"
    ]
   },
