--- a/notebooks/Health Impacts.ipynb
+++ b/notebooks/Health Impacts.ipynb
@@ -122,7 +122,7 @@
     "in Wisconsin were to upgrade to a heat pump. Note that the effects are nationwide, because winds can\n",
     "blow pollutants into nearby states. But the bulk of the effect will occur in and near the state of Wisconsin.\n",
     "\n",
-    "NOTE: a list of state FIPS codes can be found [here](\"https://www.bls.gov/respondents/mwr/electronic-data-interchange/appendix-d-usps-state-abbreviations-and-fips-codes.htm\")."
+    "NOTE: a list of state FIPS codes can be found [here](https://www.bls.gov/respondents/mwr/electronic-data-interchange/appendix-d-usps-state-abbreviations-and-fips-codes.htm)."
    ]
   },
   {
