--- a/notebooks/Health Impacts.ipynb
+++ b/notebooks/Health Impacts.ipynb
@@ -1566,7 +1566,7 @@
    "source": [
     "### Any Warnings?\n",
     "\n",
-    "In earlier examples, all the results returned no warnings. Let's if there are any when we query all counties in North Dakota."
+    "In earlier examples, all the results returned no warnings. Let's if there are any when we query all counties in Nebraska."
    ]
   },
   {
