Addressing PR comments

--- a/notebooks/Health Impacts.ipynb
+++ b/notebooks/Health Impacts.ipynb
@@ -303,7 +303,7 @@
    "id": "674fb96c-9cb0-42f7-b0df-97c051da50e6",
    "metadata": {},
    "source": [
-    "So looking at the results, we see that if all of the households in Wisconsin were to switch to heat pumps, 28 lives per year would be saved."
+    "So looking at the `impact`, we see that if all of the households in Wisconsin were to switch to heat pumps, 28 lives per year would be saved across the continental US."
    ]
   },
   {
@@ -314,8 +314,8 @@
     "## Expanding our Query to All States\n",
     "\n",
     "Now let's make a second query. Just like in the first one, we\n",
-    "Wpass in a single metric (premature mortality) and a single upgrade (a\n",
-    "medium efficiency heat pump). But unlike in the Wisconsin example, we do not pass in a state. Therefore, we get results for all states in the continental United States."
+    "pass in a single metric (premature mortality) and a single upgrade (a\n",
+    "medium efficiency heat pump). But unlike in the Wisconsin example, we do not pass in a state. Therefore, we get results for all states in the continental United States. "
    ]
   },
   {
@@ -934,7 +934,7 @@
    "metadata": {},
    "source": [
     "Our resulting dataframe has the same columns as before, but since we did not \n",
-    "ask for a specific state, we got all of them. \n",
+    "ask for a specific state, we got all of them. As before, the `impact` describes the total annual benefit to the continental US from installing heat pumps in that state.\n",
     "\n",
     "### Deriving New Metrics\n",
     "\n",
@@ -2693,7 +2693,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
