Update upgrade enums

--- a/notebooks/Health Impacts.ipynb
+++ b/notebooks/Health Impacts.ipynb
@@ -134,7 +134,7 @@
    "source": [
     "payload = {\n",
     "    \"metrics\": [\"avoided_premature_mortality_incidence\"],\n",
-    "    \"upgrade\": [\"air_source_heat_pump\"],\n",
+    "    \"upgrade\": [\"hvac__heat_pump_seer18_hspf10\"],\n",
     "    \"state_fips\": [\"55\"]\n",
     "}"
    ]
@@ -327,7 +327,7 @@
    "source": [
     "payload_all_states = {\n",
     "    \"metrics\": [\"avoided_premature_mortality_incidence\"],\n",
-    "    \"upgrade\": [\"air_source_heat_pump\"],\n",
+    "    \"upgrade\": [\"hvac__heat_pump_seer18_hspf10\"],\n",
     "}\n",
     "\n",
     "response_all_states = requests.post(URL, json=payload_all_states, headers=headers)"
@@ -1157,7 +1157,7 @@
    "source": [
     "payload_nj_counties = {\n",
     "    \"metrics\": [\"avoided_premature_mortality_incidence\"],\n",
-    "    \"upgrade\": [\"air_source_heat_pump\"],\n",
+    "    \"upgrade\": [\"hvac__heat_pump_seer18_hspf10\"],\n",
     "    \"state_fips\": [\"34\"],\n",
     "    \"county_fips\": [\"*\"]\n",
     "}\n",
@@ -1551,7 +1551,7 @@
    "source": [
     "payload_ne_counties = {\n",
     "    \"metrics\": [\"avoided_premature_mortality_incidence\"],\n",
-    "    \"upgrade\": [\"air_source_heat_pump\"],\n",
+    "    \"upgrade\": [\"hvac__heat_pump_seer18_hspf10\"],\n",
     "    \"state_fips\": [\"31\"],\n",
     "    \"county_fips\": [\"*\"]\n",
     "}\n",
@@ -2149,7 +2149,7 @@
    "source": [
     "payload_bulk = {\n",
     "    \"metrics\": [\"fine_particulate_matter\", \"ammonia\", \"nitrogen_oxides\", \"volatile_organic_compounds\", \"sulfur_dioxide\"],\n",
-    "    \"upgrade\": [\"air_source_heat_pump\"],\n",
+    "    \"upgrade\": [\"hvac__heat_pump_seer18_hspf10\"],\n",
     "    \"state_fips\": [\"36\", \"34\", \"09\"]\n",
     "}"
    ]
@@ -2414,7 +2414,7 @@
    "source": [
     "payload_groups = {\n",
     "    \"metrics\": [\"avoided_premature_mortality_incidence\"],\n",
-    "    \"upgrade\": [\"air_source_heat_pump\"],\n",
+    "    \"upgrade\": [\"hvac__heat_pump_seer18_hspf10\"],\n",
     "    \"state_fips\": [\"55\"],\n",
     "    \"group_by\": [\"house_size_square_feet_binned\"]\n",
     "}\n",
@@ -2679,7 +2679,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2693,7 +2693,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
