Update notebooks/All About REM Statistics.ipynb
Co-authored-by: Natalie Weires <weires.natalie@gmail.com>

--- a/notebooks/All About REM Statistics.ipynb
+++ b/notebooks/All About REM Statistics.ipynb
@@ -42,8 +42,7 @@
     "they should or should not be used in particular ways.\n",
     "\n",
     "To learn more about modeling only baseline\n",
-    "view the [REM Modeling Baseline notebook]\n",
-    "(https://github.com/rewiringamerica/api_demos/tree/main/notebooks/REM%20Modeling%20Baseline).\n",
+    "view the [REM Modeling Baseline notebook](https://github.com/rewiringamerica/api_demos/tree/main/notebooks/REM%20Modeling%20Baseline).\n",
     "\n",
     "\n",
     "## Imports and Configuration"
