Update notebooks/REM Modeling Baseline.ipynb
Co-authored-by: Natalie Weires <weires.natalie@gmail.com>

--- a/notebooks/REM Modeling Baseline.ipynb
+++ b/notebooks/REM Modeling Baseline.ipynb
@@ -10,7 +10,7 @@
     "REM typically provides three estimates for a home: one without an upgrade, one with the requested upgrade, and the difference (delta) between them.\n",
     "For a detailed explanation of these statistics, refer to the [All About REM Statistics notebook](https://github.com/rewiringamerica/api_demos/blob/main/notebooks/All%20About%20REM%20Statistics.ipynb).\n",
     "\n",
-    "A special case occurs when `baseline` is requested as the upgrade. In this case, REM returns a subset of the expected structure.\n",
+    "A special case occurs when `baseline` is requested as the upgrade. In this case, REM returns a subset of the expected data structure.\n",
     "For each `fuel_type` within `fuel_results`, the `upgrade` and `delta` fields will not be populated. \n",
     "Requesting `baseline` tells REM to perform estimation without applying any upgrades.\n",
     "\n",
